--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,18 @@
     </string>
 
     <string name="behavior_user_head_move">cnc.cad.rxjavatestapp.AvatarImageBehavior</string>
+
+    <!--  meizi -->
+    <!--action-->
+    <string name="action_subject">今日肥皂家话题</string>
+    <string name="action_github_login">登录 GitHub 帐号</string>
+    <string name="action_github_trending">今日 GitHub 热门</string>
+    <string name="action_share">分享</string>
+    <string name="action_refresh">刷新</string>
+    <string name="action_copy_url">复制链接</string>
+    <string name="action_open_url">打开链接</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_about">可爱的「关于」页面</string>
+    <string name="action_notifiable">每天中午提醒</string>
+
 </resources>
